tests/errors/formatTesting.f90
program main
    print "(2E13)", epsilon(1e0)    ! the code will work as we put 2E13.5
end program